Added export of original zipped file (before crds pgp and renaming) for historical purposes.